# oat

./: LICENSE  README.md  providers.yaml  pyproject.toml  requirements.txt  start.ps1  start.sh  tracer.yaml
oat/: __init__.py  exporters.py  media.py  models.py  pricing.py  providers.py  storage.py  tracer.py
oat/integrations/: __init__.py  anthropic_integration.py  base.py  google_integration.py  ollama_integration.py  openai_integration.py
openagent_trace.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: __init__.py  main.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.jsx  index.css
ui/src/pages/: AnalyticsPage.jsx  ArenaPage.jsx  FlowPage.jsx  PromptsPage.jsx  TraceDetailPage.jsx  TracesPage.jsx
