[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openagent-trace"
version = "0.1.0"
description = "The Open Standard for AI Agent Observability"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "OpenAgentTrace Contributors"}
]
keywords = [
    "ai",
    "agents", 
    "observability",
    "tracing",
    "llm",
    "opentelemetry",
    "monitoring"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.9"

# SDK has no required dependencies - uses only standard library
dependencies = []

[project.optional-dependencies]
# For running the server
server = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "duckdb>=0.9.2",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
]

# For auto-instrumentation
openai = ["openai>=1.3.0"]
anthropic = ["anthropic>=0.7.0"]
langchain = ["langchain>=0.1.0"]

# For HTTP export
http = ["httpx>=0.25.0"]

# All integrations
all = [
    "openagent-trace[server,openai,anthropic,http]",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/openagent-trace/openagent-trace"
Documentation = "https://docs.openagent-trace.dev"
Repository = "https://github.com/openagent-trace/openagent-trace"
Issues = "https://github.com/openagent-trace/openagent-trace/issues"

[project.scripts]
oat-server = "server.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["oat*", "server*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
